# sdl-gamepads

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  app.h  main.c
src/app/: CMakeLists.txt  events.c  events.h
src/lvgl/: CMakeLists.txt  display.c  display.h  lv_conf.h
